Grammar/verbose_c.gram
# 根节点，固定为RootNode，为后续多模块准备
start[RootNode]: mod=module END { RootNode([mod], LOCATIONS)}

# 模块
module[ModuleNode]: sl=statement* { ModuleNode(sl, LOCATIONS) }

# 基本语句
statement:
    | independent_block
    | class_definition
    | struct_definition
    | enum_definition
    | typedef_decl
    | function_ret
    | function_decl
    | function
    | var_decl
    | var_assign
    | if_statement
    | while_statement
    | do_while_statement
    | for_statement
    | switch_statement
    | break_statement
    | continue_statement
    | expression_as_statement

# 函数
function_decl[FunctionDeclNode]: t=type_name n=NAME '(' p=params? ')' ';' { FunctionDeclNode(t, NameNode(n.string, LOCATIONS), p or [], {}, LOCATIONS) }
function[FunctionNode]: t=type_name n=NAME '(' p=params? ')' '{' b=func_block '}' { FunctionNode(t, NameNode(n.string, LOCATIONS), p or [], {}, b, LOCATIONS) }
params[list[ParamNode]]: head=param_item tail=(',' param_item)* { [head] + [t[1] for t in tail] }
param_item[ParamNode]: t=type_name n=NAME? { ParamNode(t, NameNode(n.string, LOCATIONS) if n else None, LOCATIONS) }

# 代码块
independent_block[BlockNode]: "{" b=func_block "}" { b }
func_block[BlockNode]: s=statement* { BlockNode(s or [], LOCATIONS) }

# 返回、中断、继续
function_ret[ReturnNode]: 'return' r=expr? ';' { ReturnNode(r, LOCATIONS) }
break_statement[BreakNode]: "break" ";" { BreakNode(LOCATIONS) }
continue_statement[ContinueNode]: "continue" ";" { ContinueNode(LOCATIONS) }

# 变量
var_decl[VarDeclNode]: t=type_name n=NAME dims=array_dim_list? init=var_init? ';' { VarDeclNode(t, NameNode(n.string, LOCATIONS), init if init else None, dims or [], LOCATIONS) }
# for循环中使用的变量声明
for_var_decl[VarDeclNode]: t=type_name n=NAME dims=array_dim_list? init=var_init? { VarDeclNode(t, NameNode(n.string, LOCATIONS), init if init else None, dims or [], LOCATIONS) }
array_dim_list[list]: head=array_dim tail=dim_tail* { [head] + tail }
array_dim[ASTNode | None]: '[' content=dim_content ']' { content }
dim_content[ASTNode | None]:
    | &(']') { NullNode(LOCATIONS) }
    | size=expr { size }
dim_tail[ASTNode | None]: '[' content=dim_content ']' { content }
var_init[ASTNode]: '=' val=(expr | init_list) { val }
init_list[InitListNode]: '{' els=nonnull_init_elems? '}' { InitListNode(els or [], LOCATIONS) }
nonnull_init_elems[list]: head=expr tail=(',' expr)* { [head] + [t[1] for t in tail] }
var_assign[AssignmentNode]: n=member_expr '=' v=expr ';' { AssignmentNode(n, v, LOCATIONS) }
type_name[TypeNode]:
      | 'long' 'long' s='*'* { TypeNode(NameNode("long long", LOCATIONS), len(s), LOCATIONS) }
      | 'unlimited' t=('int' | 'float') s='*'* { TypeNode(NameNode("unlimited " + t.string, LOCATIONS), len(s), LOCATIONS) }
      | t1=(SOFT_KEYWORD | NAME) t2=(SOFT_KEYWORD | NAME) &(!'(') &(!('=' | ';' | ')' | ',' | '[')) s='*'* { TypeNode(NameNode(t1.string + " " + t2.string, LOCATIONS), len(s), LOCATIONS) }
      | t=(SOFT_KEYWORD | NAME) s='*'* { TypeNode(NameNode(t.string, LOCATIONS), len(s), LOCATIONS) }

# 表达式作为语句
expression_as_statement[ExprStmtNode]: e=expr ';' { ExprStmtNode(e, LOCATIONS) }

# 表达式
expr:
    | assignment
assignment[ASTNode]:
    | left=member_expr '+=' right=assignment{ CompoundAssignmentNode(left, Operator.PLUS_ASSIGN, right, LOCATIONS) }
    | left=member_expr '-=' right=assignment{ CompoundAssignmentNode(left, Operator.MINUS_ASSIGN, right, LOCATIONS) }
    | left=member_expr '*=' right=assignment{ CompoundAssignmentNode(left, Operator.STAR_ASSIGN, right, LOCATIONS) }
    | left=member_expr '/=' right=assignment{ CompoundAssignmentNode(left, Operator.SLASH_ASSIGN, right, LOCATIONS) }
    | left=member_expr '%=' right=assignment{ CompoundAssignmentNode(left, Operator.PERCENT_ASSIGN, right, LOCATIONS) }
    | target=member_expr '=' val=assignment { AssignmentNode(target, val, LOCATIONS) }
    | logical_or
logical_or:
    | logical_or '||' logical_and { BinaryOpNode(logical_or, Operator.LOGICAL_OR, logical_and, LOCATIONS) }
    | logical_and
logical_and:
    | logical_and '&&' equality { BinaryOpNode(logical_and, Operator.LOGICAL_AND, equality, LOCATIONS) }
    | equality
equality:
    | equality '==' relational { BinaryOpNode(equality, Operator.EQUAL, relational, LOCATIONS) }
    | equality '!=' relational { BinaryOpNode(equality, Operator.NOT_EQUAL, relational, LOCATIONS) }
    | relational
relational:
    | relational '<' additive { BinaryOpNode(relational, Operator.LESS_THAN, additive, LOCATIONS) }
    | relational '<=' additive { BinaryOpNode(relational, Operator.LESS_EQUAL, additive, LOCATIONS) }
    | relational '>' additive { BinaryOpNode(relational, Operator.GREATER_THAN, additive, LOCATIONS) }
    | relational '>=' additive { BinaryOpNode(relational, Operator.GREATER_EQUAL, additive, LOCATIONS) }
    | additive
additive:
    | additive '+' multiplicative { BinaryOpNode(additive, Operator.ADD, multiplicative, LOCATIONS) }
    | additive '-' multiplicative { BinaryOpNode(additive, Operator.SUBTRACT, multiplicative, LOCATIONS) }
    | multiplicative
multiplicative:
    | multiplicative '%' factor { BinaryOpNode(multiplicative, Operator.MODULO, factor, LOCATIONS) }
    | multiplicative '*' factor { BinaryOpNode(multiplicative, Operator.MULTIPLY, factor, LOCATIONS) }
    | multiplicative '/' factor { BinaryOpNode(multiplicative, Operator.DIVIDE, factor, LOCATIONS) }
    | factor
# 语义阶段消除类型名歧义，普通括号的边界标记用于恢复中缀优先级。
factor:
    | '(' type_name ')' factor { ParenOrCastNode(type_name, factor, LOCATIONS) }
    | '(' expr ')' { (setattr(expr, '_parenthesized', True), expr)[1] }
    | unary
    | new_instance
unary:
    | '++' operand=unary { UpdateExprNode(operand, Operator.INCREMENT, is_prefix=True, LOCATIONS) }
    | '--' operand=unary { UpdateExprNode(operand, Operator.DECREMENT, is_prefix=True, LOCATIONS) }
    | '-' n=NUMBER { NumberNode('-' + n.string, LOCATIONS) }
    | '-' operand=factor { UnaryOpNode(Operator.SUBTRACT, operand, LOCATIONS) }
    | '+' operand=factor { UnaryOpNode(Operator.ADD, operand, LOCATIONS) }
    | '!' operand=factor { UnaryOpNode(Operator.NOT, operand, LOCATIONS) }
    | '&' operand=factor { UnaryOpNode(Operator.ADDRESS_OF, operand, LOCATIONS) }
    | member_update_expr
member_update_expr:
    | base=member_expr '++' { UpdateExprNode(base, Operator.INCREMENT, is_prefix=False, LOCATIONS) }
    | base=member_expr '--' { UpdateExprNode(base, Operator.DECREMENT, is_prefix=False, LOCATIONS) }
    | member_expr
member_expr:
    | base=member_expr '[' idx=expr ']' { SubscriptNode(base, idx, LOCATIONS) }
    | member_expr '.' property=NAME { GetPropertyNode(member_expr, NameNode(property.string, LOCATIONS), LOCATIONS) }
    | member_expr '->' property=NAME { GetPropertyNode(member_expr, NameNode(property.string, LOCATIONS), via_pointer=True, LOCATIONS) }
    | member_expr '(' args=func_call_param? ')' { CallNode(member_expr, args or [], {}, LOCATIONS) }
    | '*' operand=factor { UnaryOpNode(Operator.DEREFERENCE, operand, LOCATIONS) }
    | atom
func_call_param[list[ASTNode]]: head=expr tail=(',' expr)* { [head] + [t[1] for t in tail] }

atom:
    | b=('true' | 'false') { BoolNode(b.string, LOCATIONS) }
    | 'null' { NullNode(LOCATIONS) }
    | 'super' { SuperNode(LOCATIONS) }
    | NAME { NameNode(name.string, LOCATIONS) }
    | NUMBER { NumberNode(number.string, LOCATIONS) }
    | STRING { StringNode(string.string, LOCATIONS) }

# 控制流语句
if_statement[IfNode]: 'if' '(' c=expr ')' '{' tb=func_block '}' e=else_clause? { IfNode(c, tb, e, LOCATIONS) }
else_clause[ASTNode]:
    | 'else' b=if_statement { b }
    | 'else' '{' b=func_block '}' { b }

while_statement[WhileNode]: 'while' '(' c=expr ')' '{' b=func_block '}' { WhileNode(c, b, LOCATIONS) }
do_while_statement[DoWhileNode]: 'do' '{' b=func_block '}' 'while' '(' c=expr ')' ';' { DoWhileNode(b, c, LOCATIONS) }
for_statement[ForNode]: 'for' '(' i=(for_var_decl | expr)? ';' c=expr? ';' u=expr? ')' '{' b=func_block '}' { ForNode(i, c, u, b, LOCATIONS) }
switch_statement[SwitchNode]: 'switch' '(' c=expr ')' '{' sb=switch_body '}' { SwitchNode(c, sb, LOCATIONS) }
switch_body[BlockNode]: items=switch_body_item* { BlockNode(items or [], LOCATIONS) }
switch_body_item:
    | 'case' v=expr ':' { SwitchLabelNode(v, LOCATIONS) }
    | 'default' ':' { SwitchLabelNode(None, LOCATIONS) }
    | s=statement { s }

# 类与对象
class_definition[ClassNode]: "class" n=NAME e=class_extends? "{" cb=class_body "}" { ClassNode(NameNode(n.string, LOCATIONS), cb, e, LOCATIONS) }
class_extends[list[NameNode]]: "extends" n=NAME l=("," NAME)* { [NameNode(n.string, LOCATIONS)] + [NameNode(name[1].string, LOCATIONS) for name in l] }
class_body[BlockNode]: m=(var_decl | function)* { BlockNode(m or [], LOCATIONS) }
new_instance[NewInstanceNode]: 'new' c=member_expr { NewInstanceNode(c, LOCATIONS) }

# 类型别名
typedef_decl[TypedefNode]: 'typedef' t=type_name n=NAME ';' { TypedefNode(t, NameNode(n.string, LOCATIONS), LOCATIONS) }

# 枚举
enum_definition[EnumNode]: 'enum' n=NAME '{' items=enumerator_list '}' ';' { EnumNode(NameNode(n.string, LOCATIONS), items, LOCATIONS) }
enumerator_list[list]: head=enumerator tail=(',' enumerator)* { [head] + [t[1] for t in tail] }
enumerator[EnumeratorNode]: n=NAME v=('=' expr)? { EnumeratorNode(NameNode(n.string, LOCATIONS), v[1] if v else None, LOCATIONS) }

# 结构体
struct_definition[StructNode]: 'struct' n=NAME '{' fields=struct_field* '}' ';' { StructNode(NameNode(n.string, LOCATIONS), fields, LOCATIONS) }
struct_field[VarDeclNode]: t=type_name n=NAME ';' { VarDeclNode(t, NameNode(n.string, LOCATIONS), None, [], LOCATIONS) }
